<resources>
    <string name="app_name">Trackie</string>
    <string name="track_button">Track</string>
    <string name="descrip">Enter the name or contact number of the person to be tracked</string>
    <string name="aliter">Or</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="Name_hint">Name(if already requested)</string>
    <string name="Add_Title">Add Friends</string>
    <string name="Service">Service</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="exit">Exit App</string>
    <string name="friends_name">Enter your friend\'s name</string>
    <string name="request">Request</string>
    <string name="acc">Accept</string>
    <string name="rej">Decline</string>
    <string name="request_text">wants to be allowed to track you</string>
    <string name="def_user">A user</string>
    <string name="contacts">Select from Contacts</string>
    <string name="manage_friends">Manage Friends</string>
    <string name="traceable">Traceable</string>
    <string name="tracker">Trackers</string>
    <string name="title_activity_friend_lists">FriendLists</string>
    <string name="tab_text_1">Traceable</string>
    <string name="tab_text_2">Trackers</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="destination">Destination</string>
    <string name="navigate">Navigate</string>
    <string name="location">Location</string>
    <string name="loc_alarm">Location Alarm</string>
    <string name="set">Set</string>
    <string name="reset">Reset</string>
    <string name="trackers">Trackers</string>
    <string name="title_activity_location_alarm">Map</string>
    <string name="alarm_switch">Switch</string>
    <string name="alarm_off">Alarm Off</string>
    <string name="alarm_on">Alarm On</string>
    <string name="cloudstorage">Cloud Storage</string>
</resources>
